AM_CPPFLAGS = -I../../src/ADLib

bin_PROGRAMS = ADLibTest

ADLibTest_SOURCES = ../../src/ADLib/adtlibtests.cpp
ADLibTest_LDADD = ../../src/ADLib/adtmaths.lo ../../src/ADLib/adtarrays.lo ../../src/ADLib/adtdiff.lo ../../src/ADLib/adtstack.lo ../../src/ADLib/adtthreads.lo ../../src/ADLib/adtparallel.lo ../../src/ADLib/adterror.lo -lpthread
